--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,15 +1,15 @@
-.titlePage {
-    font-size: 27px;
-    margin-top: 0;
-    margin-bottom: 1.5rem;
-    text-align: center;
-    color: #7700a5
+.loginWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    width: 100%;
 }
 
 .formWrapper {
-    justify-content: center;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .form {
@@ -22,12 +22,6 @@
     border-radius: 10px;
     padding: 20px;
     margin: auto;
-}
-
-.cardContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .formGroup {
@@ -43,26 +37,6 @@
     margin-bottom: 1.5rem;
 }
 
-.label{
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-}
-
-.input {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: white;
-}
-
-.textarea {
-    width: 100%;
-    height: 5rem;
-    resize: vertical;
-    border-radius: 5px;
-    border: none;
-    background-color: white;
-}
 
 .button {
     display: inline-block;
@@ -92,14 +66,4 @@
 
 .error {
     border: 2px solid #ff6666;
-}
-
-.deleteButton {
-    background-color: #ff3333;
-    width: 50%;
-    margin: 0 auto;
-}
-
-.deleteButton:hover {
-    background-color: #cc3333;
 }
