--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -1,26 +1,3 @@
-.loginWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    width: 100%;
-}
-
-
-.formGroup {
-    border: none;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    width: 100%;
-}
-
-.titleForm {
-    font-size: 25px;
-    margin-bottom: 1.5rem;
-}
-
-
 .button {
     display: inline-block;
     padding: 0.5rem 1rem;
@@ -38,4 +15,14 @@
 
 .button:hover {
     background-color: #5a017e;
+}
+
+.redButton {
+    background-color: #ff3333;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.redButton:hover {
+    background-color: #cc3333;
 }
