--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -1,6 +1,8 @@
 .footer {
-    background-color: #7700a5;
+    background-color: #8a2be2;
     color: white;
-    padding: .5rem;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width:100%
 }
