--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    
 }
 
 .main {
@@ -9,9 +10,16 @@
     flex: 1;
 }
 
+.boxContent{
+    width: 84%;
+    margin-left: 16%;
+}
+
 .content {
+    /* margin-left: 12%; */
     flex: 1;
     padding: 1rem;
+    margin-bottom: 3rem;
 }
 
 .active {
