--- a/src/components/layout/Sidebar/Sidebar.module.css
+++ b/src/components/layout/Sidebar/Sidebar.module.css
@@ -1,9 +1,12 @@
 .sidebar {
-    width: 250px;
+    width: 16%;
+    height: 100%;
     background-color: #efefef;
     padding: 1rem;
     box-sizing: border-box;
     box-shadow: 2px 6px 12px 0px #7700a5;
+    position: fixed;
+    left: 0;
 }
 
 .navigation {
