--- a/src/pages/curriculo/CadastrarInformacoes/CadastrarInformacoes.module.css
+++ b/src/pages/curriculo/CadastrarInformacoes/CadastrarInformacoes.module.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     width: 60%;
-    background-color: rgb(231, 230, 230);
+    background-color: #f2f2f2;
     /* box-shadow: 1px 1px 3px 3px #7700a5; */
     border-radius: 10px;
     padding: 20px;
