Ajuste de funcionalidades e alguns estilos

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -9,6 +9,11 @@
     top: 0;
 }
 
+.active {
+    text-decoration: none;
+    color: #ffffff;
+}
+
 .logo{
     margin-right: 1rem;
     margin-left: .5rem;
