--- a/src/components/common/Title/Title.module.css
+++ b/src/components/common/Title/Title.module.css
@@ -1,4 +1,7 @@
-.titleForm {
-    font-size: 25px;
+.title {
+    font-size: 26px;
+    margin-top: 0;
     margin-bottom: 1.5rem;
+    text-align: center;
+    color: #8a2be2
 }
