--- a/src/components/forms/Input/Input.module.css
+++ b/src/components/forms/Input/Input.module.css
@@ -56,7 +56,7 @@
     text-align: center;
     text-decoration: none;
     color: #fff;
-    background-color: #7700a5;
+    background-color: #8a2be2;
     border-radius: 0.25rem;
     border: none;
     cursor: pointer;
