--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #8a2be2;
+    background-color:#7B5DFF;
     color: white;
     text-align: center;
     position: fixed;
