--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: #8a2be2;
+    background-color: #7B5DFF;
     color: white;
     display: flex;
     justify-content: space-between;
