--- a/src/components/forms/Input/Input.module.css
+++ b/src/components/forms/Input/Input.module.css
@@ -56,7 +56,7 @@
     text-align: center;
     text-decoration: none;
     color: #fff;
-    background-color: #8a2be2;
+    background-color: #7B5DFF;
     border-radius: 0.25rem;
     border: none;
     cursor: pointer;
@@ -64,7 +64,7 @@
 }
 
 .button:hover {
-    background-color: #5a017e;
+    background-color: #7B5DFF;
 }
 
 .errorMsg {
