--- a/src/components/layout/Sidebar/Sidebar.module.css
+++ b/src/components/layout/Sidebar/Sidebar.module.css
@@ -4,7 +4,7 @@
     background-color: #efefef;
     padding: 1rem;
     box-sizing: border-box;
-    box-shadow: 2px 6px 12px 0px #8a2be2;
+    box-shadow: 2px 6px 12px 0px #7B5DFF;
     position: fixed;
     left: 0;
 }
@@ -35,7 +35,7 @@
 
 .navigation a{
     text-decoration: none;
-    color: #8a2be2;
+    color: #7B5DFF;
 }
 
 .navigation a:hover {
