--- a/src/pages/curriculo/CadastrarInformacoes/CadastrarInformacoes.module.css
+++ b/src/pages/curriculo/CadastrarInformacoes/CadastrarInformacoes.module.css
@@ -3,7 +3,7 @@
     margin-top: 0;
     margin-bottom: 1.5rem;
     text-align: center;
-    color: #8a2be2
+    color: #7B5DFF
 }
 
 .formWrapper {
